--- a/week2/illustrationC2_2.ipynb
+++ b/week2/illustrationC2_2.ipynb
@@ -901,11 +901,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tanh_x = scale_factor*(np.tanh(x)/x) ** (1/n_iter)\n",
-    "tanh_y1 = scale_factor*(np.tanh(y1)/y1) ** (1/n_iter)\n",
-    "tanh_y2 = scale_factor*(np.tanh(y2)/y2) ** (1/n_iter)\n",
-    "tanh_grid_x = scale_factor*(np.tanh(grid_x)/grid_x) **(1/n_iter)\n",
-    "tanh_grid_y = scale_factor*(np.tanh(grid_y)/grid_y) **(1/n_iter)\n",
+    "tanh_x = (scale_factor*np.tanh(x)/x) ** (1/n_iter)\n",
+    "tanh_y1 = (scale_factor*np.tanh(y1)/y1) ** (1/n_iter)\n",
+    "tanh_y2 = (scale_factor*np.tanh(y2)/y2) ** (1/n_iter)\n",
+    "tanh_grid_x = (scale_factor*np.tanh(grid_x)/grid_x) **(1/n_iter)\n",
+    "tanh_grid_y = (scale_factor*np.tanh(grid_y)/grid_y) **(1/n_iter)\n",
     "ani2 = FuncAnimation(fig, update_tanh,\n",
     "\t\t\t\t\tframes=[(tanh_x,tanh_y1,tanh_y2,tanh_grid_x,tanh_grid_y) for i in range(n_iter)],\n",
     "\t\t\t\t\tinit_func=init,fargs=[ax], blit=True,repeat=False)\n",
